// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`donut renderer correctly renders donut slice for each group 1`] = `
<g
  class="donut"
>
  <circle
    class="donut-dot"
    cx="0"
    cy="-130"
    fill="rgb(255, 195, 146)"
    r="5"
  />
  <circle
    class="donut-dot"
    cx="64.99999999999999"
    cy="-112.58330249197704"
    fill="rgb(255, 195, 146)"
    r="5"
  />
  <circle
    class="donut-dot"
    cx="112.58330249197702"
    cy="-65.00000000000001"
    fill="rgb(255, 195, 146)"
    r="5"
  />
  <circle
    class="donut-dot"
    cx="130"
    cy="-7.960204194457796e-15"
    fill="#000"
    r="5"
  />
  <circle
    class="donut-dot"
    cx="112.58330249197704"
    cy="64.99999999999997"
    fill="rgb(255, 195, 146)"
    r="5"
  />
  <circle
    class="donut-dot"
    cx="64.99999999999999"
    cy="112.58330249197704"
    fill="rgb(255, 195, 146)"
    r="5"
  />
  <circle
    class="donut-dot"
    cx="1.592040838891559e-14"
    cy="130"
    fill="rgb(255, 195, 146)"
    r="5"
  />
  <circle
    class="donut-dot"
    cx="-64.99999999999996"
    cy="112.58330249197705"
    fill="rgb(255, 195, 146)"
    r="5"
  />
  <circle
    class="donut-dot"
    cx="-112.58330249197701"
    cy="65.00000000000006"
    fill="rgb(255, 195, 146)"
    r="5"
  />
  <circle
    class="donut-dot"
    cx="-130"
    cy="2.3880612583373385e-14"
    fill="rgb(255, 195, 146)"
    r="5"
  />
  <circle
    class="donut-dot"
    cx="-112.58330249197702"
    cy="-65.00000000000001"
    fill="rgb(255, 195, 146)"
    r="5"
  />
  <circle
    class="donut-dot"
    cx="-65.00000000000006"
    cy="-112.583302491977"
    fill="rgb(255, 195, 146)"
    r="5"
  />
  <g
    class="donut-slice-group"
  >
    <path
      class="donut-slice"
      d="M-33.64647586332768,-125.57035741757888A130,130,0,0,1,91.92388155425118,-91.92388155425117L70.71067811865476,-70.71067811865474A100,100,0,0,0,-25.881904510252063,-96.59258262890683Z"
      fill="rgb(182, 43, 61)"
    />
    <path
      class="donut-text-path"
      d="M-33.64647586332768 -125.57035741757888 A130 130 0 0 1 91.92388155425118 -91.92388155425117 "
      id="donut-text-path-0"
      style="fill: none;"
    />
    <text
      class="donut-label"
      dy="19"
    >
      <textpath
        href="#donut-text-path-0"
        startOffset="50%"
        text-anchor="middle"
      >
        Group A
      </textpath>
    </text>
  </g>
  <g
    class="donut-slice-group"
  >
    <path
      class="donut-slice"
      d="M91.92388155425118,-91.92388155425117A130,130,0,0,1,33.64647586332772,125.57035741757886L25.881904510252095,96.59258262890683A100,100,0,0,0,70.71067811865476,-70.71067811865474Z"
      fill="rgb(202, 87, 75)"
    />
    <path
      class="donut-text-path"
      d="M 33.64647586332772 125.57035741757886 A 130 130 0 0 0 91.92388155425118 -91.92388155425117"
      id="donut-text-path-1"
      style="fill: none;"
    />
    <text
      class="donut-label"
      dy="-11"
    >
      <textpath
        href="#donut-text-path-1"
        startOffset="50%"
        text-anchor="middle"
      >
        Group B
      </textpath>
    </text>
  </g>
  <g
    class="donut-slice-group"
  >
    <path
      class="donut-slice"
      d="M33.64647586332772,125.57035741757886A130,130,0,0,1,-91.92388155425117,91.92388155425118L-70.71067811865474,70.71067811865476A100,100,0,0,0,25.881904510252095,96.59258262890683Z"
      fill="rgb(221, 124, 93)"
    />
    <path
      class="donut-text-path"
      d="M -91.92388155425117 91.92388155425118 A 130 130 0 0 0 33.64647586332772 125.57035741757886"
      id="donut-text-path-2"
      style="fill: none;"
    />
    <text
      class="donut-label"
      dy="-11"
    >
      <textpath
        href="#donut-text-path-2"
        startOffset="50%"
        text-anchor="middle"
      >
        Group C
      </textpath>
    </text>
  </g>
  <g
    class="donut-slice-group"
  >
    <path
      class="donut-slice"
      d="M-91.92388155425117,91.92388155425118A130,130,0,0,1,-91.9238815542512,-91.92388155425117L-70.71067811865477,-70.71067811865474A100,100,0,0,0,-70.71067811865474,70.71067811865476Z"
      fill="rgb(238, 160, 117)"
    />
    <path
      class="donut-text-path"
      d="M-91.92388155425117 91.92388155425118 A130 130 0 0 1 -91.9238815542512 -91.92388155425117 "
      id="donut-text-path-3"
      style="fill: none;"
    />
    <text
      class="donut-label"
      dy="19"
    >
      <textpath
        href="#donut-text-path-3"
        startOffset="50%"
        text-anchor="middle"
      >
        Group D
      </textpath>
    </text>
  </g>
  <g
    class="donut-slice-group"
  >
    <path
      class="donut-slice"
      d="M-91.9238815542512,-91.92388155425117A130,130,0,0,1,-33.64647586332768,-125.57035741757888L-25.881904510252063,-96.59258262890683A100,100,0,0,0,-70.71067811865477,-70.71067811865474Z"
      fill="rgb(255, 195, 146)"
    />
    <path
      class="donut-text-path"
      d="M-91.9238815542512 -91.92388155425117 A130 130 0 0 1 -33.64647586332768 -125.57035741757888 "
      id="donut-text-path-4"
      style="fill: none;"
    />
    <text
      class="donut-label"
      dy="19"
    >
      <textpath
        href="#donut-text-path-4"
        startOffset="50%"
        text-anchor="middle"
      >
        Group E
      </textpath>
    </text>
  </g>
</g>
`;

exports[`donut renderer updates donut when data changes 1`] = `
<g
  class="donut"
>
  <circle
    class="donut-dot"
    cx="0"
    cy="-130"
    fill="#000"
    r="5"
  />
  <circle
    class="donut-dot"
    cx="112.58330249197702"
    cy="-65.00000000000001"
    fill="rgb(202, 87, 75)"
    r="5"
  />
  <circle
    class="donut-dot"
    cx="112.58330249197704"
    cy="64.99999999999997"
    fill="rgb(202, 87, 75)"
    r="5"
  />
  <circle
    class="donut-dot"
    cx="1.592040838891559e-14"
    cy="130"
    fill="rgb(202, 87, 75)"
    r="5"
  />
  <circle
    class="donut-dot"
    cx="-112.58330249197701"
    cy="65.00000000000006"
    fill="rgb(202, 87, 75)"
    r="5"
  />
  <circle
    class="donut-dot"
    cx="-112.58330249197702"
    cy="-65.00000000000001"
    fill="rgb(202, 87, 75)"
    r="5"
  />
  <g
    class="donut-slice-group"
  >
    <path
      class="donut-slice"
      d="M-64.99999999999997,-112.58330249197704A130,130,0,0,1,130,0L100,0A100,100,0,0,0,-49.99999999999998,-86.60254037844388Z"
      fill="rgb(182, 43, 61)"
    />
    <path
      class="donut-text-path"
      d="M-64.99999999999997 -112.58330249197704 A130 130 0 0 1 130 0 "
      id="donut-text-path-0"
      style="fill: none;"
    />
    <text
      class="donut-label"
      dy="19"
    >
      <textpath
        href="#donut-text-path-0"
        startOffset="50%"
        text-anchor="middle"
      >
        Group A
      </textpath>
    </text>
  </g>
  <g
    class="donut-slice-group"
  >
    <path
      class="donut-slice"
      d="M130,0A130,130,0,1,1,-65.00000000000006,-112.58330249197701L-50.00000000000004,-86.60254037844385A100,100,0,1,0,100,0Z"
      fill="rgb(202, 87, 75)"
    />
    <path
      class="donut-text-path"
      d="M -65.00000000000006 -112.58330249197701 A 130 130 0 1 0 130 0"
      id="donut-text-path-1"
      style="fill: none;"
    />
    <text
      class="donut-label"
      dy="-11"
    >
      <textpath
        href="#donut-text-path-1"
        startOffset="50%"
        text-anchor="middle"
      >
        Group B
      </textpath>
    </text>
  </g>
</g>
`;
